--- a/Webapp/canvas.html
+++ b/Webapp/canvas.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
-
+<!--https://www.codicode.com/art/how_to_draw_on_a_html5_canvas_with_a_mouse.aspx-->
 <html>
 <head>
+<script type="text/javascript">
+    // Define some variables to keep track of the touch position
+    var touchX,touchY;
+
+    function sketchpad_touchStart() {
+        getTouchPos();
+        drawDot(ctx,touchX,touchY,12);
+
+        // Prevents an additional mousedown event being triggered
+        event.preventDefault();
+    }
+
+    function sketchpad_touchMove(e) { 
+        // Update the touch co-ordinates
+        getTouchPos(e);
+
+        // During a touchmove event, unlike a mousemove event, we don't need to check if the touch is engaged, since there will always be contact with the screen by definition.
+        drawDot(ctx,touchX,touchY,12); 
+
+        // Prevent a scrolling action as a result of this touchmove triggering.
+        event.preventDefault();
+    }
+
+    // Get the touch position relative to the top-left of the canvas
+    // When we get the raw values of pageX and pageY below, they take into account the scrolling on the page
+    // but not the position relative to our target div. We'll adjust them using "target.offsetLeft" and
+    // "target.offsetTop" to get the correct values in relation to the top left of the canvas.
+    function getTouchPos(e) {
+        if (!e)
+            var e = event;
+
+        if (e.touches) {
+            if (e.touches.length == 1) { // Only deal with one finger
+                var touch = e.touches[0]; // Get the information for finger #1
+                touchX=touch.pageX-touch.target.offsetLeft;
+                touchY=touch.pageY-touch.target.offsetTop;
+				
+            }
+        }
+		
+    }
+</script>
 <script>
 var mousePressed = false;
 var lastX, lastY;
