--- a/Webapp/canvas.html
+++ b/Webapp/canvas.html
@@ -2,6 +2,8 @@
 <!--https://www.codicode.com/art/how_to_draw_on_a_html5_canvas_with_a_mouse.aspx-->
 <html>
 <head>
+    <h1>Hand Written Digit Recognition</h1>
+    <h2>By Niall McCann - G00344474</h2>
 <script type="text/javascript">
     // Define some variables to keep track of the touch position
     var touchX,touchY;
