--- a/Webapp/canvas.html
+++ b/Webapp/canvas.html
@@ -2,6 +2,7 @@
 <!--https://www.codicode.com/art/how_to_draw_on_a_html5_canvas_with_a_mouse.aspx-->
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <h1>Hand Written Digit Recognition</h1>
     <h2>By Niall McCann - G00344474</h2>
 <script type="text/javascript">
@@ -98,7 +99,7 @@ function clearArea() {
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="JsCode.js"></script>
     <div align="center">
-        <canvas id="myCanvas" width="500" height="200" style="border:2px solid black"></canvas>
+        <canvas id="myCanvas" width="280" height="280" style="border:2px solid black"></canvas>
         <br /><br />
         <button onclick="javascript:clearArea();return false;">Clear Area</button>
         Line width : <select id="selWidth">
